<resources>
    <string name="app_name">Music</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password (At least 6 characters)</string>
    <string name="confirm_password1">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="reset_password">Reset Password</string>
    <string name="don_t_worry_we_just_need_your_registered_email">Don\'t worry we just need your registered email!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="playlist_cover_desc">\n</string>
    <string name="song_cover_desc">\n</string>

</resources>